[package]
name = "libmount"
description = """
    The type-safe wrapper around mount system call
"""
license = "MIT/Apache-2.0"
readme = "README.rst"
keywords = ["linux", "container", "mount", "volume", "filesystem"]
homepage = "http://github.com/tailhook/libmount"
documentation = "http://docs.rs/libmount"
version = "0.1.6"
authors = ["paul@colomiets.name"]

[dependencies]
libc = "0.2.28"
nix = "0.9.0"
quick-error = "1.2.0"

[dev-dependencies]
argparse = "0.2.1"
env_logger = "0.3.3"
log = "0.3.6"

[lib]
name = "libmount"
path = "src/lib.rs"

