[package]
name = "libmount"
description = """
    The type-safe wrapper around mount system call
"""
license = "MIT/Apache-2.0"
readme = "README.md"
keywords = ["linux", "container", "mount", "volume", "filesystem"]
homepage = "http://github.com/tailhook/libmount"
documentation = "http://docs.rs/libmount"
version = "0.1.15"
authors = ["paul@colomiets.name"]

[dependencies]
libc = "^0.2.30"
nix = "0.16"
thiserror = "1.0"
fs-err = "*"

[dev-dependencies]
argparse = "0.2"
env_logger = "0.8"
log = "0.4"

[lib]
name = "libmount"
path = "src/lib.rs"

